@@ -109,6 +109,9 @@ enum tmcg_openpgp_skalgo_t
 	TMCG_OPENPGP_SKALGO_AES192				= 8,
 	TMCG_OPENPGP_SKALGO_AES256				= 9,
 	TMCG_OPENPGP_SKALGO_TWOFISH				= 10,
+	TMCG_OPENPGP_SKALGO_CAMELLIA128			= 11, // added by RFC 5581
+	TMCG_OPENPGP_SKALGO_CAMELLIA192			= 12, // added by RFC 5581
+	TMCG_OPENPGP_SKALGO_CAMELLIA256			= 13, // added by RFC 5581
 	TMCG_OPENPGP_SKALGO_EXPERIMENTAL0		= 100,
 	TMCG_OPENPGP_SKALGO_EXPERIMENTAL1		= 101,
 	TMCG_OPENPGP_SKALGO_EXPERIMENTAL2		= 102,
